mutants.out/log/crates__runtime__src__lib.rs_line_222_col_9.log

*** crates/runtime/src/lib.rs:222:9: replace RuntimeRunner::compile_script -> Result<RuntimePlan, RuntimeError> with Ok(Default::default())

*** mutation diff:
--- crates/runtime/src/lib.rs
+++ replace RuntimeRunner::compile_script -> Result<RuntimePlan, RuntimeError> with Ok(Default::default())
@@ -214,38 +214,17 @@
         self.run_plan(plan)
     }
 
     fn compile_script(
         &self,
         request: &RuntimeRequest,
         rust_source: &str,
     ) -> Result<RuntimePlan, RuntimeError> {
-        let script_request = ScriptRequest::new(rust_source, &request.input_json);
-        let compiled = self.script_runner.compile(&script_request)?;
-        let mut policy = request.sandbox.to_policy();
-
-        if policy.filesystem.mode == FilesystemMode::Restricted {
-            policy.filesystem.entries.push(FilesystemEntry::new(
-                compiled.workspace_path(),
-                FilesystemAccess::Read,
-            ));
-        }
-
-        let command = CommandSpec::new(compiled.binary_path().display().to_string())
-            .stdin(compiled.input_json());
-        let plan = self.sandbox_runner.compile(&command, &policy)?;
-
-        Ok(RuntimePlan {
-            target: RuntimeTargetKind::Script,
-            sandbox: plan.backend,
-            command,
-            policy,
-            _compiled_script: Some(compiled),
-        })
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     fn compile_agent(
         &self,
         request: &RuntimeRequest,
         command: &AgentCommand,
     ) -> Result<RuntimePlan, RuntimeError> {
         let mut spec = CommandSpec::new(command.program())


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=runtime@0.1.0
    Blocking waiting for file lock on package cache
       Fresh script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/script)
       Fresh agent v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/agent)
       Fresh sandbox v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/sandbox)
       Dirty runtime v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/runtime): couldn't read metadata for file `target/debug/deps/libruntime-f6f0fa129a177682.rlib`
   Compiling runtime v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/crates/runtime)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a2b3775ea973f797 -C extra-filename=-f6f0fa129a177682 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rmeta --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rmeta --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rmeta`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=edaf1587f9d3a3d6 -C extra-filename=-24731b632105dc02 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rlib --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rlib --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rlib`
warning: unused imports: `FilesystemAccess`, `FilesystemEntry`, and `FilesystemMode`
 --> crates/runtime/src/lib.rs:6:33
  |
6 |     BackendReport, CommandSpec, FilesystemAccess, FilesystemEntry, FilesystemMode, SandboxError,
  |                                 ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `ScriptRequest`
 --> crates/runtime/src/lib.rs:9:43
  |
9 | use script::{CompiledScript, ScriptError, ScriptRequest, ScriptRunner};
  |                                           ^^^^^^^^^^^^^

error[E0277]: the trait bound `RuntimePlan: Default` is not satisfied
   --> crates/runtime/src/lib.rs:222:12
    |
222 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `RuntimePlan`

For more information about this error, try `rustc --explain E0277`.
warning: `runtime` (lib test) generated 2 warnings
error: could not compile `runtime` (lib test) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=edaf1587f9d3a3d6 -C extra-filename=-24731b632105dc02 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rlib --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rlib --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `runtime` (lib) generated 2 warnings (2 duplicates)
error: could not compile `runtime` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name runtime --edition=2024 crates/runtime/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a2b3775ea973f797 -C extra-filename=-f6f0fa129a177682 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps --extern agent=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libagent-df1187056c019dff.rmeta --extern sandbox=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libsandbox-3854b11f8daf2006.rmeta --extern script=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-KKGn15.tmp/target/debug/deps/libscript-d02cc1a249e66324.rmeta` (exit status: 1)

*** result: Failure(101)
